// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputGroup component > should match a snapshot when used in explicit mode 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-input-group"
  >
    <input
      aria-label="Input type undefined"
      class="mocked-styled-2 el-input"
    />
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
      />
    </svg>
    <label
      class="mocked-styled-0 el-input-group-label"
    >
      Please enter a username
    </label>
  </div>
</DocumentFragment>
`;

exports[`InputGroup component > should match a snapshot when used in react shorthand mode 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-input-group"
  >
    <input
      aria-label="Input type undefined"
      class="mocked-styled-2 el-input"
      id="myId"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup component > should match a snapshot when used in react shorthand mode, with a label 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-input-group"
  >
    <input
      aria-label="Input type undefined"
      class="mocked-styled-2 el-input"
      id="myId"
    />
    <label
      class="mocked-styled-0 el-input-group-label"
      for="myId"
    >
      Enter your username
    </label>
  </div>
</DocumentFragment>
`;

exports[`InputGroup component > should match a snapshot when used in react shorthand mode, with an icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-input-group"
  >
    <input
      aria-label="Input type undefined"
      class="mocked-styled-2 el-input"
      id="myId"
    />
    email
  </div>
</DocumentFragment>
`;

exports[`InputGroup component > should match a snapshot when used in react shorthand mode, with an icon and a label 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-input-group"
  >
    <input
      aria-label="Input type undefined"
      class="mocked-styled-2 el-input"
      id="myId"
    />
    email
    <label
      class="mocked-styled-0 el-input-group-label"
      for="myId"
    >
      Enter your username
    </label>
  </div>
</DocumentFragment>
`;
